writable/eksekusi/1234567/error.txt
Main.java:5: error: not a statement
asdasd
^
Main.java:5: error: ';' expected
asdasd
      ^
2 errors
